--- a/user/assets/css/main.css
+++ b/user/assets/css/main.css
@@ -1,3 +1,12 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
+/* assets/css/main.css */
+body {
+  background-color: #f7f7f7;
+  font-family: 'Helvetica', sans-serif;
+}
+
+h1 {
+  color: #333;
+}
